# cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml  release.yml  rustfmt.yaml
gateway-client/: Cargo.toml
gateway-client/src/: lib.rs
src/: http.rs  main.rs  manifest.rs
src/adapter/: list.rs  mod.rs  update.rs
src/commands/: mod.rs
src/commands/gw/: mod.rs
src/gateway/: client.rs  config.rs  manifest.rs  mod.rs  reset.rs  restart.rs  status.rs  update.rs
