[package]
name = "umi"
description = "UMI device management CLI tool"
documentation = "https://docs.rs/crate/umi/"
homepage = "https://umi.engineering/cli"
repository = "https://github.com/umi-eng/cli"
license = "MPL-2.0"
version = "0.0.2"
edition = "2021"

[dependencies]
hftwo = "0.1.2"
uftwo = "0.1.0"
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
open = "5.1.2"
tokio = { version = "1.37.0", features = ["full", "net"] }
tokio-modbus = "0.11.0"
