[package]
name = "umi"
description = "UMI device management tool."
documentation = "https://docs.rs/crate/umi/"
homepage = "https://umi.engineering/cli"
repository = "https://github.com/umi-eng/cli"
license = "MPL-2.0"
version = "0.0.7"
edition = "2021"

[dependencies]
gateway-client = { path = "gateway-client" }
hftwo = "0.1.2"
uftwo = "0.1.0"
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
open = "5.1.2"
tokio = { version = "1.37.0", features = ["full", "net"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }
colored = "2.1.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
members = ["gateway-client"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "umi-eng/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
